# Kositsyna_course_work

./: CMakeLists.txt  Doxyfile  README.md
include/: CMakeLists.txt  client.cpp  client.h  output.cpp  server.cpp  server.h
resourse/: output.json  posttime_for_tablet.json  posttime_of_day.json  postuser.json  putfn.json  puttabletafter_time.json  puttabletname.json  puttabletstartdate.json
src/: CMakeLists.txt  json-api_test.cpp
